<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentJobActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textviewPageTitle"
                android:layout_width="483dp"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:text="JOB DETAILS"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/textViewStartingTimeTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingTop="15dp"
                android:text="@string/startingTimeTitle"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textViewStartTime"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="21sp"
                tools:layout_editor_absoluteX="181dp"
                tools:layout_editor_absoluteY="117dp" />

            <TextView
                android:id="@+id/textViewPickUpLocationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/pickUpLocationTitle"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textViewPickUpLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="21sp"
                tools:layout_editor_absoluteX="183dp"
                tools:layout_editor_absoluteY="181dp" />

            <TextView
                android:id="@+id/textViewDropOffLocationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/dropOffLocationTitle"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textViewDropOffPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textViewVehicleRegistrationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/vehicleRegistrationTitle"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textViewVehicleRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textViewJobIdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/jobIdTitle"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textViewJobID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textViewTrailerIdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/trailerIdTitle"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textViewTrailerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textViewfilmProjectNameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/filmProjectNameTitle"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textViewFilmProjectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <Button
                android:id="@+id/buttonJobCompleted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonJobCompleted"
                android:textSize="23sp" />

            <Button
                android:id="@+id/buttonBackToMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textSize="23sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>